disabled cron.yaml

--- a/cron.yaml
+++ b/cron.yaml
@@ -1,4 +1,4 @@
-cron:
-- description: scrape websoc
-  url: /scrape.py
-  schedule: every day 06:00
+# cron:
+# - description: scrape websoc
+#   url: /scrape.py
+#   schedule: every day 06:00
