--- a/app.yaml
+++ b/app.yaml
@@ -16,12 +16,11 @@ skip_files:
 - README\.md
 
 handlers:
-- url: /(.*\.(gif|png|jpg|ico))
+- url: /(.*\.(gif|png|jpg|ico|css|js))
   static_files: \1
-  upload: .*\.(gif|png|jpg|ico)
+  upload: .*\.(gif|png|jpg|ico|css|js)
+- url: /
+  script: index.app
+  secure: always
 - url: /scrape
   script: scrape.py
-  secure: always
-- url: .*
-  script: main.app
-  secure: always
