--- a/app.yaml
+++ b/app.yaml
@@ -19,8 +19,6 @@ handlers:
 - url: /(.*\.(gif|png|jpg|ico|css|js))
   static_files: \1
   upload: .*\.(gif|png|jpg|ico|css|js)
-- url: /
+- url: /(scrape)?
   script: index.app
   secure: always
-- url: /scrape
-  script: scrape.py
