--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 application: antscoper
-version: 2
+version: 1
 
 runtime: python27
 api_version: 1
@@ -20,7 +20,7 @@ handlers:
 - url: /(.*\.(gif|png|jpg|ico|css|js))
   static_files: \1
   upload: .*\.(gif|png|jpg|ico|css|js)
-- url: /(scrape_yearterm)?
+- url: /(scrape_yearterm|(map|data)\.json)?
   script: index.app
   secure: always
 - url: /scrape
