--- a/app.yaml
+++ b/app.yaml
@@ -2,6 +2,10 @@ runtime: python27
 api_version: 1
 threadsafe: false
 
+automatic_scaling:
+  max_instances: 1
+  max_idle_instances: 1
+
 skip_files:
 - ^(.*/)?#.*#$
 - ^(.*/)?.*~$
