--- a/app.yaml
+++ b/app.yaml
@@ -5,12 +5,8 @@ automatic_scaling:
   max_idle_instances: 1
 
 handlers:
-- url: /(.*\.(gif|png|jpg|ico|css|js))
-  static_files: \1
-  upload: .*\.(gif|png|jpg|ico|css|js)
-- url: /(scrape_yearterm|(map|data)\.json)?
-  script: index.app
-  secure: always
-- url: /scrape
-  script: scrape.py
-  secure: always
+- url: /static
+  static_dir: static
+- url: /.*
+  script: auto
+
