--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,31 @@
-Flask==2.2.2
-google-cloud-ndb==2.1.0
+async-timeout==4.0.3
+cachetools==5.3.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+Flask==2.2.2 # main
+google-api-core==2.17.1
+google-auth==2.28.0
+google-cloud-core==2.4.1
+google-cloud-datastore==2.19.0
+google-cloud-ndb==2.1.0 # main
+googleapis-common-protos==1.62.0
+grpcio==1.60.1
+grpcio-status==1.60.1
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pymemcache==4.0.0
+pytz==2024.1
+redis==4.6.0
+requests==2.31.0
+rsa==4.9
+six==1.16.0 # main
+urllib3==2.2.1
+Werkzeug==2.2.2 # main
